--- a/Source/AnkkBoard.Web/AnkkBoard.Web.csproj
+++ b/Source/AnkkBoard.Web/AnkkBoard.Web.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\DBM\TaskB.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\VM\TaskPriority.cs" />
     <Compile Include="Models\VM\TaskStatus.cs" />
     <Compile Include="Models\VM\TaskViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -277,6 +278,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\NewTask.cshtml" />
     <Content Include="Views\Home\Nothing.cshtml" />
+    <Content Include="Views\Home\EditTask.cshtml" />
+    <Content Include="Views\Home\EditorTemplates\TaskViewModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
